web-infras/parser/tests/fixtures/self-added/let-as-identifier/module/let-as-func-declar-name/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,10)
1|function let() {
 |        ^
[SyntaxError]: unexpect keyword in strict mode (1,10)
1|function let() {
 |        ^
[SyntaxError]: unexpect keyword in strict mode (1,10)
1|function let() {
 |        ^
